RESOLVED FIXED162590
REGRESSION(r205883): Letterpressed text is invisible
https://bugs.webkit.org/show_bug.cgi?id=162590
Summary REGRESSION(r205883): Letterpressed text is invisible
Myles C. Maxfield
Reported 2016-09-26 20:05:18 PDT
REGRESSION(r205883): Letterpressed text is invisible
Attachments
Patch (6.29 KB, patch)
2016-09-26 20:11 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2016-09-26 20:11:44 PDT
WebKit Commit Bot
Comment 2 2016-09-27 01:12:54 PDT
Comment on attachment 289904 [details] Patch Clearing flags on attachment: 289904 Committed r206422: <http://trac.webkit.org/changeset/206422>
WebKit Commit Bot
Comment 3 2016-09-27 01:12:58 PDT
All reviewed patches have been landed. Closing bug.
Myles C. Maxfield
Comment 4 2016-09-27 13:31:15 PDT
Note You need to log in before you can comment on or make changes to this bug.