REGRESSION(r205883): Letterpressed text is invisible https://bugs.webkit.org/show_bug.cgi?id=162590 Source/WebCore:

<rdar://problem/28141512>

Reviewed by Simon Fraser.

r205883 removed the last place where we use CGFonts directly in WebKit. However,
our letterpress code is sensitive to the current state of the CGContext.

Tests: fast/text/letterpress-different.html
       fast/text/letterpress-paint.html

* platform/graphics/cocoa/FontCascadeCocoa.mm:
(WebCore::showLetterpressedGlyphsWithAdvances):

LayoutTests:

Reviewed by Simon Fraser.

Letterpress is only implemented on iOS, so letterpress-different.html is marked
as only passing on iOS. letterpress-paint.html makes sure that letterpressed paint
is not invisible.

* TestExpectations:
* fast/text/letterpress-different-expected-mismatch.html: Added.
* fast/text/letterpress-different.html: Added.
* fast/text/letterpress-paint-expected-mismatch.html: Added.
* fast/text/letterpress-paint.html: Added.
* platform/ios-simulator/TestExpectations:


Canonical link: https://commits.webkit.org/180539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206422 268f45cc-cd09-0410-ab3c-d52691b4dbfc